# raytracer-cpp

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  The Ray Tracer Challenge (Jamis Buck) (Z-Library).pdf:Zone.Identifier  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: Riptracer.cpp  Riptracer.h  main.cpp
test/: CMakeLists.txt
test/source/: raytracer-cpp_test.cpp
